--- a/index.html
+++ b/index.html
@@ -9,6 +9,6 @@
 <body>
     <h1>Github Practice</h1>
     <h2>Practice Repo</h2>
-    <h3>practice text</h3>
+    <h3>branch-2</h3>
 </body>
 </html>
