added green box

--- a/index.html
+++ b/index.html
@@ -10,5 +10,8 @@
     <h1>Github Practice</h1>
     <h2>Practice Repo</h2>
     <h3>branch-2</h3>
+    <div class="div1">
+        1
+    </div>
 </body>
 </html>
